--- a/Free_code_camp/Tribute_site/styles/style.css
+++ b/Free_code_camp/Tribute_site/styles/style.css
@@ -3,6 +3,7 @@ body{
 	margin: 0;
 	padding: 0;
 	font: 14px;
+	font-family: Arial, sans-serif;
 }
 
 /*CONTAINERS*/
@@ -18,6 +19,42 @@ body{
 	background-color: #c16fd6;
 }
 /*HOME*/
+.heading{
+	width: 80%;
+	margin: auto;
+	text-align: center;
+	color: white;
+}
+#logo{
+	margin: auto;
+	display: block;
+	height: 40%;
+	padding: 5% 0% 2%;
+}
+.tribute_header{
+	font-family: 'Courgette', cursive;
+	font-size: 1.5rem;
+	padding-bottom: 1%;
+}
+.pine_header{
+	display: inline-block;
+	margin-bottom: 3%;
+	border-top: 5px solid white;
+	border-bottom: 5px solid white;
+	letter-spacing: 0.8rem;
+	font-family: 'Saira Semi Condensed', sans-serif;
+	font-size: 7rem;
+	font-weight: 500;
+	line-height: 7.5rem;
+}
+.button{
+	width: 10%;
+	padding: 1% 2%;
+	margin: auto;
+	border: 1px solid black;
+	text-align: center;
+	border-radius: 4px;
+}
 
 
 /*QUOTE*/
