--- a/Free_code_camp/Tribute_site/styles/style.css
+++ b/Free_code_camp/Tribute_site/styles/style.css
@@ -13,6 +13,10 @@ body{
 }
 .quote_sec{
 	height: 100vh;
+	background-image: url("../images/1.jpg");
+	background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .info_sec{
 	height: 100vh;
@@ -58,7 +62,24 @@ body{
 
 
 /*QUOTE*/
+.quote_cont{
+	width: 80%;
+	margin: auto;
+	padding-top: 30vh;
+}
 .quote_box{
-	height: 30vh;
+	height: 40vh;
 	background-color: #efdf51;
+	text-align: center;
+	color: #693e74;
+}
+#quote_line{
+	font-size: 2.5rem;
+	padding-top: 8%;
+}
+#quote_name{
+	font-size: 1.5rem;
+}
+i{
+	margin: 0 1%;
 }
