Update Font and Colours

--- a/Free_code_camp/Tribute_site/styles/style.css
+++ b/Free_code_camp/Tribute_site/styles/style.css
@@ -3,7 +3,10 @@ body{
 	margin: 0;
 	padding: 0;
 	font: 14px;
-	font-family: Arial, sans-serif;
+	font-family: 'Roboto', sans-serif;
+}
+a{
+	text-decoration: none;
 }
 
 /*CONTAINERS*/
@@ -21,6 +24,13 @@ body{
 .info_sec{
 	height: 100vh;
 	background-color: #c16fd6;
+}
+.more_sec{
+	height: 70vh;
+	background-image: url("../images/3.png");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 /*HOME*/
 .heading{
@@ -51,19 +61,20 @@ body{
 	font-weight: 500;
 	line-height: 7.5rem;
 }
-.button{
+.head_button{
 	width: 10%;
-	padding: 1% 2%;
+	padding: 1% 1%;
 	margin: auto;
-	border: 1px solid black;
 	text-align: center;
 	border-radius: 4px;
+	color: #efdf51;
+	background-color: #693e74;
 }
 
 
 /*QUOTE*/
 .quote_cont{
-	width: 80%;
+	width: 70%;
 	margin: auto;
 	padding-top: 30vh;
 }
@@ -71,15 +82,63 @@ body{
 	height: 40vh;
 	background-color: #efdf51;
 	text-align: center;
+	border-radius: 8px;
 	color: #693e74;
 }
 #quote_line{
-	font-size: 2.5rem;
-	padding-top: 8%;
+	font-size: 2.3rem;
+	padding-top: 9.5%;
 }
 #quote_name{
-	font-size: 1.5rem;
+	font-size: 1.3rem;
 }
-i{
-	margin: 0 1%;
+i{  margin: 0 1%;
+}
+
+
+/*INFORMATION*/
+.info_head{
+	display: inline-block;
+	margin: 3.5% 0% 2%;
+	font-family: 'Saira Semi Condensed', sans-serif;
+	font-size: 2.5rem;
+	border-top: 3px solid white;
+	border-bottom: 3px solid white;
+}
+.info_text{
+	margin: 0 0 2% 0;
+}
+.info_boxes{
+	display: flex;
+	flex-wrap: wrap;
+	height: 67vh;
+}
+.info_box{
+	border: 1px solid green;
+	flex: 20%;
+	text-align: center;
+}
+
+
+/*MORE*/
+.more_cont{
+	width: 50%;
+	margin: auto;
+	padding-top: 20vh;
+}
+.more_box{
+	height: 35vh;
+	background-color: #ff3399;
+	text-align: center;
+	border-radius: 8px;
+	color: #693e74;
+}
+.more_button{
+	width: 30%;
+	padding: 1.5% 1%;
+	margin: auto;
+	text-align: center;
+	border-radius: 4px;
+	color: #693e74;
+	background-color: #efdf51;
 }
