Style Info Section

--- a/Free_code_camp/Tribute_site/styles/style.css
+++ b/Free_code_camp/Tribute_site/styles/style.css
@@ -99,7 +99,7 @@ i{  margin: 0 1%;
 /*INFORMATION*/
 .info_head{
 	display: inline-block;
-	margin: 3.5% 0% 2%;
+	margin: 4.5% 0% 2.5%;
 	font-family: 'Saira Semi Condensed', sans-serif;
 	font-size: 2.5rem;
 	border-top: 3px solid white;
@@ -112,11 +112,23 @@ i{  margin: 0 1%;
 	display: flex;
 	flex-wrap: wrap;
 	height: 67vh;
+	margin: 0 0.5%;
 }
 .info_box{
-	border: 1px solid green;
 	flex: 20%;
+	padding: 6.5% 2% 0;
 	text-align: center;
+	color: white;
+	font-size: 1.3rem;
+}
+.box_1, .box_4, .box_7{
+	background-color: #C983DB;
+}
+.box_2, .box_5, .box_8{
+	background-color: #A55FB7;
+}
+.box_3, .box_6{
+	background-color: #D298E1;
 }
 
 
@@ -148,6 +160,6 @@ i{  margin: 0 1%;
 	margin-top: 5%;
 	text-align: center;
 	border-radius: 4px;
-	color: #f747a0;
+	color: #693e74;
 	background-color: #efdf51;
 }
