--- a/Free_code_camp/Survey/styles/style.css
+++ b/Free_code_camp/Survey/styles/style.css
@@ -15,6 +15,12 @@ body{
 	box-shadow: 0px 5px 5px #888888; /*CHANGE COLOUR*/
 	background-color: #f9f9db;  /*CHANGE COLOUR*/
 }
+
+.header{
+	
+}
+
+
 .form{
 	display: flex;
 }
