--- a/Free_code_camp/Survey/styles/style.css
+++ b/Free_code_camp/Survey/styles/style.css
@@ -51,15 +51,44 @@ body{
 .sub{
 	font-size: 0.7rem;
 }
+label{
+	 display:inline-block;
+	 width: 25%;
+}
 input[type=text], input[type=date]{
 	margin: 1% 0;
 }
-input[type=text]{
+#email{
 	width: 80%;
 }
 textarea{
 	resize: none;
 	width: 80%;
+}
+.rate_text{
+	font-size: 0.7rem;
+}
+.slider {
+    -webkit-appearance: none;
+    width: 80%;
+    height: 15px;
+    border-radius: 5px;
+	margin: 2% 0%;
+    background: #ddddb3;
+    outline: none;
+	opacity: 0.8;
+}
+.slider:hover{
+	opacity: 1;
+}
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #084704;
+    cursor: pointer;
 }
 input[type=submit], a{
 	display: block;
@@ -81,3 +110,4 @@ a{
 	padding: 0.8% 2%;
 	margin-top: 6%;
 }
+
