--- a/Free_code_camp/Survey/styles/style.css
+++ b/Free_code_camp/Survey/styles/style.css
@@ -4,15 +4,16 @@ body{
 	font-size: 14px;
 	background-image: url("../images/background2.jpg");
 	background-size: cover;
+	background-repeat: no-repeat;
 	font-family: 'Roboto', sans-serif;
 }
 
 .container, .sub_container{
 	margin: auto;
-	margin-top: 4%;
+	margin-top: 3%;
+	margin-bottom: 3%;
 	padding: 2%;
 	width: 65%;
-	height: 72vh;
 	box-shadow: 0px 5px 5px #888888;
 	background-color: #f9f9db; 
 }
@@ -34,7 +35,6 @@ body{
 	color: #084704;
 	padding-bottom: 2%;
 }
-
 .form{
 	display: flex;
 	margin-top: 1%;
@@ -42,7 +42,10 @@ body{
 }
 .form_box{
 	flex: 1;
+	margin-bottom: 2%;
 }
+
+/*CONTACT INFORMATION*/
 .sec_head{
 	display: block;
 	margin: 4% 0% 3%;
@@ -51,12 +54,14 @@ body{
 .sub{
 	font-size: 0.7rem;
 }
-label{
+.information label{
 	 display:inline-block;
 	 width: 25%;
 }
 input[type=text], input[type=date]{
 	margin: 1% 0;
+	background-color: #ddddb3;
+	border: none;
 }
 #email{
 	width: 80%;
@@ -64,7 +69,44 @@ input[type=text], input[type=date]{
 textarea{
 	resize: none;
 	width: 80%;
+	background-color: #ddddb3;
+	border: none;
 }
+	
+/* CUSTOME RADIO BUTTONS */
+.radio_style {
+    display: block;
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 2.5%;;
+    cursor: pointer;
+}
+
+.radio_style input[type=radio] {
+    position: absolute;
+    opacity: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 18px;
+    width: 18px;
+    background-color: #ddddb3;
+    border-radius: 50%;
+}
+
+.radio_style:hover input ~ .checkmark {
+    background-color: #c6c695;
+}
+
+.radio_style input:checked ~ .checkmark {
+    background-color: #12720c;
+}
+
+
+/* RATINGS SLIDER*/
 .rate_text{
 	font-size: 0.7rem;
 }
@@ -110,4 +152,22 @@ a{
 	padding: 0.8% 2%;
 	margin-top: 6%;
 }
+
+@media (min-width: 820px) and (max-width: 1120px){
+	.form_box{
+		flex: 50%;
+	}
+	.ratings{
+		text-align: center;
+	}
+} 
+@media (max-width: 819px){
+	.form_box{
+		flex: 100%;
+	}
+	.ratings{
+		text-align: center;
+	}
+}
+
 
