--- a/Free_code_camp/Technical_document/styles/style.css
+++ b/Free_code_camp/Technical_document/styles/style.css
@@ -5,46 +5,62 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 }
+header{
+	background-color: #93a2c6;
+	margin: auto;
+	width: 75%;
+	border-radius: 0 0 10px 10px;
+}
 h1{
 	text-align: center;
+	color: #162a59;
 	font-family: 'Archivo Narrow', sans-serif;
 	font-size: 2.5rem;
-	margin-bottom: 1%;
+	margin: 0 0 2% 0;
+	padding: 2%;
 }
-h2{
+.side_text h2{
 	text-align: center;
 	margin: 0 0 1%;
 	padding: 2% 0;
-	background-color: bisque;
+	background-color: #b1b9cc;
 	border-radius: 10px 0 0 0;
 	font-family: 'Archivo Narrow', sans-serif;
 	font-size: 1.5rem;
 }
-.side_text{
-	background-color: yellow;
-	border-radius: 10px 0 0 0;
-	padding-bottom: 2%;
-}
-.side_bar p{
-	margin: 5% 4%;
+a{
+	text-decoration: none;
+	color: black;
 }
 
 .container{
-	width: 90%;
+	width: 75%;
 	margin: auto;
 	display: flex;
 	border-radius: 10px;
 }
 /*SIDE BAR*/
-.side_bar{
+.side_con{
 	flex: 22%;
+}
+.side_bar{
+	width: 16.2%;
+	position: fixed;
+}
+.side_text{
+	background-color:#e6eaed;
+	border-radius: 10px 0 0 0;
+	padding-bottom: 1%;
+}
+.side_bar p{
+	margin: 5% 4%;
 }
 i{
 	float: right;
 	padding-right: 2%;
 }
 .sections{
-	background-color: purple;
+	background-color: #b1b9cc;
 	cursor: pointer;
 	padding: 2% 4%;
 	margin-top: 1%;
@@ -52,32 +68,48 @@ i{
 #first_sec{
 	margin-top: 0;
 }
-#sub_1, #sub_2, #sub_3{
+#sub_1, #sub_2, #sub_3, #sub_4{
 	display: none;
-	background-color: green;
+	background-color: #e6eaed;
 	margin-bottom: 1%;
 }
 .sub_group a{
 	display: block;
-	padding: 2% 2%;
+	border-bottom: 1px solid rgba(198,198,198,0.5);
+	padding: 2% 4%;
 	text-decoration: none;
 }
 .sub_group a:hover{
-	background-color: darkgreen;
+	background-color: #99a5a5;
 }
 
 /*MAIN CONTENT*/
 .content{
-	background-color: orange;
+	background-color: #e6eaed;
 	border-radius: 0 10px 10px 10px;
-	flex: 78%;
-	position: relative;
-	padding: 1.5%;
+	flex: 70%;
+	padding: 3% 6% 3% 4%;
+	margin-bottom: 2%;
+}
+.content h2{
+	font-size: 1.7rem;
+	margin-top: 0;
+}
+.content h3{
+	font-size: 1.4rem;
+}
+code{
+	margin: 2% 2% 2% 3%; 
+	display: block;
+	font-size: 0.8rem;
+	font-family: monospace;
 }
 .return_button{
+	position: fixed;
 	display: inline-block;
-	text-decoration: none;
-	background-color: aqua;
-	padding: 1% 2%;
+	background-color: #93a2c6;
+	padding: 0.5% 1%;
 	border-radius: 5px;
+	bottom: 3%;
+	left: 15vw;
 }
