--- a/Free_code_camp/Product_landing_page/styles/style.css
+++ b/Free_code_camp/Product_landing_page/styles/style.css
@@ -3,23 +3,47 @@ body{
 	padding: 0;
 	box-sizing: border-box;
 	font-size: 14px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .main_sect{
-	border: 1px solid green;
 	height: 100vh;
-	/* BACKGROUND IMAGE*/
+	background: url(../images/back_1.jpeg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.logo{
+	display: inline-block;
+	padding: 2% 2% 1% 4%;
+	font-weight: bold;
+	font-size: 1.5rem;
 }
 nav{
-	border: 1px solid purple;
 	display: inline-block;
 	float: right;
-	padding: 2%;
+	width: 20%;
+	margin: 2% 2%;
+	text-align: right;
+	font-size: 1.1rem;
+	font-weight: 700;
+}
+nav a{
+	text-decoration: none;
+	padding: 1% 2%;
+	margin: 0 1%;
+	color: white;
+}
+nav a:hover{
+	border-bottom: 3px solid white;
 }
 h1{
-	margin-top: 40vh;
+	margin-top: 28vh;
 	text-align: center;
-	font-size: 3rem;
+	font-size: 4rem;
+	color: white;
+	text-shadow: 1px 1px 2px #3d3b3b;
+	font-weight: bold;
+	line-height: 4.5rem;
 }
 .up_button{
 	position: fixed;
