--- a/Free_code_camp/Product_landing_page/styles/style.css
+++ b/Free_code_camp/Product_landing_page/styles/style.css
@@ -62,24 +62,24 @@ h1{
 	padding: 0.5% 1.5% 1%;
 }
 /*FEATURES*/
-/*ALIGN ALL FEATURES DETAILS TO LEFT*/
 .features_sect{
 	display: flex;
-	padding: 3% 3% 5% 3%;
+	padding: 2% 3% 5% 1%;
 }
 h2{
-	/*text-align:center;*/
-	padding-left: 10%;
-	font-size: 2rem;
-	line-height: 2rem;
+	font-size: 2.5rem;
+	line-height: 2.5rem;
 	font-weight: bold;
-	margin-bottom: 3%;
+	margin-bottom: 2%;
 	/*CHANGE FONT*/
+}
+.features_name p{
+	margin-bottom: 8%;
 }
 .features_image{
 	flex: 50%;
 	text-align: right;
-	padding-top: 3%;
+	padding-top: 5%;
 }
 #camera_1{
 	width: 75%;
@@ -87,33 +87,29 @@ h2{
 }
 .features_name{
 	flex: 50%;
-	padding-left: 10%;
+	padding: 0 10% 0 10%;
 }
 .feature_cont{
 	display: flex;
 	flex-wrap: wrap;
-	text-align: center;
 	color: #f0522a;
 	font-weight: bold;
 	font-size: 1.2rem;
-	padding: 0% 8%;
 }
 .feature_det{
-	padding: 1% 1% 1% 4%;
 	flex: 40%;
 }
 .symbol{
-	width: 40%;
+	width: 35%;
 	display: block;
-	margin: auto;
-	margin-top: 6%;
-	margin-bottom: 8%;
+	margin: 6% 0 8%;
+	padding-left: 2vw;
 }
 .more_button{
 	display: inline-block;
 	border: 2px solid black;
 	padding: 1% 2%;
-	margin: 6% 4% 4% 15%;
+	margin: 5% 4% 4% 0;
 	border-radius: 5px;
 	font-weight: bold;
 }
@@ -124,8 +120,10 @@ h2{
 
 /*PRICES*/
 .prices_sect{
-	border: 1px solid yellow;
 	display: flex;
+}
+.prices h2{
+	padding-left: 0%;
 }
 .prices{
 	flex: 50%;
