--- a/Free_code_camp/Product_landing_page/styles/style.css
+++ b/Free_code_camp/Product_landing_page/styles/style.css
@@ -64,7 +64,7 @@ h1{
 /*FEATURES*/
 .features_sect{
 	display: flex;
-	padding: 2% 3% 5% 1%;
+	padding: 4% 2% 5% 1%;
 }
 h2{
 	font-size: 2.5rem;
@@ -73,43 +73,45 @@ h2{
 	margin-bottom: 2%;
 	/*CHANGE FONT*/
 }
-.features_name p{
-	margin-bottom: 8%;
+p{
+	margin-bottom: 3%;
 }
 .features_image{
-	flex: 50%;
+	flex: 45%;
 	text-align: right;
 	padding-top: 5%;
 }
 #camera_1{
 	width: 75%;
 	display: inline-block;
+	padding-right: 5%;
 }
 .features_name{
-	flex: 50%;
-	padding: 0 10% 0 10%;
+	flex: 55%;
+	padding: 0 3% 0 5%;
 }
 .feature_cont{
 	display: flex;
 	flex-wrap: wrap;
 	color: #f0522a;
 	font-weight: bold;
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 }
 .feature_det{
-	flex: 40%;
+	flex: 30%;
+	/*border: 1px solid green;*/
 }
 .symbol{
 	width: 35%;
 	display: block;
-	margin: 6% 0 8%;
-	padding-left: 2vw;
+	margin: 15% 0 8%;
+	padding-left: 3vw;
 }
 .more_button{
 	display: inline-block;
 	border: 2px solid black;
 	padding: 1% 2%;
-	margin: 5% 4% 4% 0;
+	margin: 10% 4% 4% 0;
 	border-radius: 5px;
 	font-weight: bold;
 }
@@ -122,16 +124,13 @@ h2{
 .prices_sect{
 	display: flex;
 }
-.prices h2{
-	padding-left: 0%;
-}
 .prices{
 	flex: 50%;
+	padding-left: 5vw;
 }
 .price_det{
 	border: 1px solid grey;
 	padding: 2%;
-	margin: auto;
 	margin-bottom: 2%;
 	width: 70%;
 }
