--- a/Free_code_camp/Product_landing_page/styles/style.css
+++ b/Free_code_camp/Product_landing_page/styles/style.css
@@ -3,17 +3,17 @@ body{
 	padding: 0;
 	box-sizing: border-box;
 	font-size: 14px;
+	color: #2f2f2f;
 	font-family: 'Open Sans', sans-serif;
 }
 a{
 	text-decoration: none;
-	color: black;
+	color: #2f2f2f;
 }
 
 .main_sect{
 	height: 100vh;
 	background: url(../images/back_1.jpeg);
-	/*SLIDESHOW IMAGES?*/
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -71,10 +71,9 @@ h2{
 	line-height: 2.5rem;
 	font-weight: bold;
 	margin-bottom: 2%;
-	/*CHANGE FONT*/
 }
 p{
-	margin-bottom: 3%;
+	margin-bottom: 2%;
 }
 .features_image{
 	flex: 45%;
@@ -99,7 +98,6 @@ p{
 }
 .feature_det{
 	flex: 30%;
-	/*border: 1px solid green;*/
 }
 .symbol{
 	width: 35%;
@@ -109,9 +107,9 @@ p{
 }
 .more_button{
 	display: inline-block;
-	border: 2px solid black;
+	border: 2px solid #2f2f2f;
 	padding: 1% 2%;
-	margin: 10% 4% 4% 0;
+	margin: 8% 4% 4% 0;
 	border-radius: 5px;
 	font-weight: bold;
 }
@@ -123,20 +121,43 @@ p{
 /*PRICES*/
 .prices_sect{
 	display: flex;
+	margin-top: 2%;
 }
 .prices{
 	flex: 50%;
-	padding-left: 5vw;
+	padding-left: 8vw;
 }
 .price_det{
-	border: 1px solid grey;
-	padding: 2%;
+	padding: 2% 0;
 	margin-bottom: 2%;
 	width: 70%;
 }
+.price_det h3{
+	color: #2f2f2f;
+	margin-top: 0;
+}
+.price_det p{
+	color: #f0522a;
+	font-size: 2.3rem;
+	font-weight: bold;
+	float: right;
+	margin: 0;
+	padding-top:0;
+	padding-left: 3.5%;
+}
+.dollar{
+	font-size: 1.5rem;
+	font-weight: bold;
+	float: left;
+	padding-top: 10%;
+}
 .prices_image{
 	flex: 50%;
-	border: 1px solid green;
+	padding-left: 1%;
+	padding-top: 10vh;
+}
+#camera_2{
+	width: 90%;
 }
 
 /*SIGN_UP*/
@@ -154,7 +175,7 @@ input[type=text]{
 }
 input[type=submit]{
 	display: inline-block;
-	border: 2px solid black;
+	border: 2px solid #2f2f2f;
 	background-color: white;
 	padding: 0.5% 1%;
 	border-radius: 5px;
