--- a/Free_code_camp/Portfolio/styles/style.css
+++ b/Free_code_camp/Portfolio/styles/style.css
@@ -3,10 +3,6 @@ body{
 	padding: 0;
 	font-size: 14px;
 }
-.box{
-  height: 100vh;
-  border: 1px solid black;
-}
 .main_section{
 	height: 100vh;
 	background-color: green;
@@ -14,6 +10,7 @@ body{
 }
 nav{
     position: fixed;
+	z-index:100;
 	top: 10px;
 	right: 10px;
 	width: 250px;
@@ -28,6 +25,13 @@ nav a{
 }
 nav a:hover{
 	border-bottom: 3px solid white;
+}
+i{
+	text-decoration: none;
+	color: black;
+}
+i:hover{
+	padding: 1% 1.25%;
 }
 .main_section h1{
 	margin: 0;
@@ -44,15 +48,27 @@ nav a:hover{
 	padding: 1%;
 	width: 10%;
 }
-.main_down{
+.arrow_right{
 	position: absolute;
 	bottom: 0%;
 	right: 2%;
-	padding: 1%;
+	padding: 0.75% 1%;
+	background-color: yellow;
+}
+.arrow_left{
+	position: absolute;
+	bottom: 0%;
+	right: 7%;
+	padding: 0.75% 1%;
 	background-color: yellow;
 }
 
 /*  PORTFOLIO */
+.portfolio_section{
+	background-color: chocolate;
+	position: relative;
+	height: 100vh;
+}
 .portfolio{
 	display: flex;
 	border: 1px solid black;
@@ -67,6 +83,11 @@ nav a:hover{
 }
 
 /*  ABOUT */
+.about_section{
+	position: relative;
+	background-color: silver;
+	height: 100vh;
+}
 .about{
   display: flex;
   border: 1px solid black;
