--- a/Odin_project/Etch-a-sketch/styles/style.css
+++ b/Odin_project/Etch-a-sketch/styles/style.css
@@ -1,6 +1,8 @@
 body{
-  background: linear-gradient(to bottom right, #FAE42F, #FAA42F); 
+  background: linear-gradient(to bottom right, #fce949, #ffb34c); 
   background-attachment: fixed;
+  box-sizing: border-box;
+  font-size: 0;
 }
 h1{
   font-family: 'Alegreya Sans SC', sans-serif;
@@ -25,6 +27,7 @@ button{
   border-radius: 5px;
   background-color: #FF1F10;
   color: white;
+  font-size: 14px;
   outline: none;
 }
 button:hover{
@@ -32,7 +35,13 @@ button:hover{
 }
 .box{
   margin: auto;
-  border: 1px solid black;
+  padding: 0;
   width: 450px;
   height: 450px;
+}
+.squares{
+  display: inline-block;
+  border: 0.5px solid black;
+  margin: 0;
+  padding: 0;
 }
