--- a/Odin_project/HTML and CSS/Youtube Page/styles/style.css
+++ b/Odin_project/HTML and CSS/Youtube Page/styles/style.css
@@ -68,6 +68,55 @@ main{
 	border: 1px solid green;
 }
 aside{
-	flex: 35%;
-	border: 1px solid red;
+	flex: 33%;
+	padding: 4vh 4vw 4vh 4vh;;
+	color: #474747;
 }
+aside h3{
+	margin: 0;
+	display: inline-block;
+	font-size: 1.25rem;
+	font-weight: 500;
+}
+.autoplay{
+	float: right;
+}
+.upnext{
+	margin: 2vh 0;
+	padding-bottom: 2vh;
+	border-bottom: 1px solid #d3d3d3;
+}
+aside h4{
+	font-size: 1rem;
+}
+aside p{
+	color: #a1a1a1;
+	font-size: 0.9rem;
+	margin: 0.4vh 0;
+	padding: 0.5vh 0 6vh;
+	line-height: 1.4rem;
+}
+aside p:last-of-type{
+	padding-bottom: 1.5vh;
+}
+.next_text{
+	padding: 0.5vh 0 3vh;
+}
+aside img{
+	float: left;
+	margin-right: 0.5vw;
+	overflow: auto;
+}
+.more{
+	background-color: #eeeeee;
+	border-radius: 3px;
+	text-align: center;
+	color: #a5a5a5;
+	margin-top: 0;
+	padding: 1vh;
+}
+	
+	
+	
+	
+	
